--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
   "bugs": {
     "url": "https://github.com/jodessacs/cosokeyword/issues"
   },
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha test"
+  },
   "homepage": "https://github.com/jodessacs/cosokeyword",
   "dependencies": {
     "async": "^0.9.0",
-    "express": "^4.9.8"
+    "express": "^4.9.8",
+    "glossary": "^0.1.1"
   },
   "devDependencies": {
     "chai": "^1.9.2",
