--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/jodessacs/cosokeyword",
   "dependencies": {
     "async": "^0.9.0",
+    "config": "^1.6.0",
     "express": "^4.9.8",
     "glossary": "^0.1.1"
   },
