--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cosokeyword",
   "version": "0.0.0",
   "description": "cosokeyword ===========",
-  "main": "index.js",
+  "main": "app/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jodessacs/cosokeyword.git"
