--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "async": "^0.9.0",
     "config": "^1.6.0",
     "express": "^4.9.8",
-    "glossary": "^0.1.1"
+    "glossary": "^0.1.1",
+    "winston": "^0.8.1"
   },
   "devDependencies": {
     "chai": "^1.9.2",
