--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "config": "^1.6.0",
     "express": "^4.9.8",
     "glossary": "^0.1.1",
+    "keyword-extractor": "0.0.10",
     "say": "^0.6.0",
     "winston": "^0.8.1"
   },
@@ -32,7 +33,6 @@
     "chai": "^1.9.2",
     "gulp": "^3.8.9",
     "gulp-mocha": "^1.1.1",
-    "keyword-extract": "^0.1.6",
     "request": "^2.45.0"
   }
 }
