--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "config": "^1.6.0",
     "express": "^4.9.8",
     "glossary": "^0.1.1",
+    "gramophone": "0.0.3",
     "keyword-extractor": "0.0.10",
     "say": "^0.6.0",
-    "winston": "^0.8.1"
+    "winston": "^0.8.1",
+    "word-freq": "0.0.8"
   },
   "devDependencies": {
     "chai": "^1.9.2",
