--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "start": "node app/index.js"
   },
   "homepage": "https://github.com/jodessacs/cosokeyword",
   "dependencies": {
