--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "config": "^1.6.0",
     "express": "^4.9.8",
     "glossary": "^0.1.1",
+    "good": "^3.1.0",
+    "hapi": "^7.1.0",
+    "jade": "^1.7.0",
     "keyword-extractor": "0.0.10",
     "say": "^0.6.0",
     "winston": "^0.8.1",
