--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.9.8",
     "glossary": "^0.1.1",
     "good": "^3.1.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "hapi": "^7.1.0",
     "jade": "^1.7.0",
     "keyword-extractor": "0.0.10",
