--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "chai": "^1.9.2",
+    "connect-livereload": "^0.5.0",
     "gulp": "^3.8.9",
     "gulp-mocha": "^1.1.1",
     "request": "^2.45.0"
