--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "test": "gulp test",
-    "start": "node app/index.js"
+    "start": "node app/index.js",
+    "postinstall": "cd public && bower install && grunt build --force"
   },
   "homepage": "https://github.com/jodessacs/cosokeyword",
   "dependencies": {
