--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "gulp test",
     "start": "node app/index.js",
-    "postinstall": "cd public && bower install && grunt build"
+    "postinstall": "cd public && grunt build"
   },
   "homepage": "https://github.com/jodessacs/cosokeyword",
   "dependencies": {
