--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.9.0",
+    "bower": "^1.3.12",
     "config": "^1.6.0",
     "express": "^4.9.8",
     "glossary": "^0.1.1",
