--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "good": "^3.1.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "gulp": "^3.8.9",
     "hapi": "^7.1.0",
     "jade": "^1.7.0",
     "keyword-extractor": "0.0.10",
